--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8081
 
 spring.datasource.url=jdbc:mysql://localhost:3306/projeto_demo
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=3306
 spring.datasource.name=mysqlds
 
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
